--- a/application/views/templates/base/header.html
+++ b/application/views/templates/base/header.html
@@ -47,7 +47,7 @@
                             </ul>
                             
                         </div>
-                        <div class="contact row">
+<!--                        <div class="contact row">
                             <h4>Xem thêm thông tin</h4>
                             <ul class="col-lg-12 col-md-12">
                                 <li><a href="#"><span class="arrow">></span> Praesent justo dolor</a></li>
@@ -55,7 +55,7 @@
                                 <li><a href="#"><span class="arrow">></span> Praesent justo dolor</a></li>
                                 <li><a href="#"><span class="arrow">></span> Praesent justo dolor</a></li>
                             </ul>
-                        </div>	
+                        </div>	-->
                         {/if}
                     </li>
                     {/foreach}
