--- a/application/packages/admin/views/templates/admin/index.html
+++ b/application/packages/admin/views/templates/admin/index.html
@@ -286,10 +286,16 @@
                             <a href="#"><i class="fa fa-bar-chart-o fa-fw"></i> Quản Lý<span class="fa arrow"></span></a>
                             <ul class="nav nav-second-level">
                                 <li>
-                                    <a href="flot.html">Bài Viết</a>
+                                    <a href="#posts">Bài Viết</a>
                                 </li>
                                 <li>
-                                    <a href="morris.html">Morris.js Charts</a>
+                                    <a href="morris.html">Hình Ảnh</a>
+                                </li>
+                                <li>
+                                    <a href="morris.html">Video</a>
+                                </li>
+                                <li>
+                                    <a href="morris.html">Post Categories</a>
                                 </li>
                             </ul>
                             <!-- /.nav-second-level -->
@@ -442,6 +448,7 @@
         {include file="admin/dashboard.html"}
         {include file="admin/posts_list.html"}
         {include file="admin/post_details.html"}
+        {include file="admin/gallery_list.html"}
         <script src="/static/js/home/underscore.js"></script>
         <script src="/static/js/home/backbone.js"></script>
         <script src="/static/js/home/mustache.js"></script>
