render and load view block wiget

--- a/application/packages/admin/views/templates/admin/index.html
+++ b/application/packages/admin/views/templates/admin/index.html
@@ -110,7 +110,7 @@
                                     <a href="#">Post Categories</a>
                                 </li>
                                 <li>
-                                    <a href="#">Block Wiget</a>
+                                    <a href="#block-wiget">Block Wiget</a>
                                 </li>
                             </ul>
                             <!-- /.nav-second-level -->
