finish block_wiget

--- a/application/packages/admin/views/templates/admin/dashboard.html
+++ b/application/packages/admin/views/templates/admin/dashboard.html
@@ -562,11 +562,11 @@
                                 <td>{{id}}</td>
                                 <td>
                                   <span class="block_name_{{id}}">{{name}}</span>
-                                  <input type="text" id="input_name_{{id}}" style="display: none"/>
+                                  <input type="text" class='form-control' id="input_name_{{id}}" style="display: none"/>
                                 </td>
                                 <td>
                                   <span class="block_description_{{id}}">{{description}}</span>
-                                  <input type="text" id="input_description_{{id}}" style="display: none"/>
+                                  <input type="text" class='form-control' id="input_description_{{id}}" style="display: none"/>
                                 </td>
                                 <td>
                                   <span id="url_block_{{id}}">{{url}}</span>
