--- a/application/packages/gallery/views/templates/gallery/gallery.html
+++ b/application/packages/gallery/views/templates/gallery/gallery.html
@@ -7,7 +7,8 @@
         {{#attributes}}
         <li class="col-lg-4 col-sm-6">
             <figure>
-                <a class="img-link cu-hand" data-action="detail" href="#gallery/{{id}}" data-post="{{id}}" ><img src="/static/media/images/{{image}}" alt="Jung Do Kwan" /></a>
+                <a class="img-link cu-hand" data-action="detail" href="#gallery/{{id}}" data-post="{{id}}" >
+                  <img src="/static/media/images/{{image}}" alt="Jung Do Kwan" style="max-height: 280px; max-width: 370px" /></a>
             </figure>
         <figcaption>
             <h4><a href="#" data-action="detail" data-post="{{id}}">{{post_title_vi}}</a></h4>
@@ -16,6 +17,26 @@
         </li>
         {{/attributes}}
         {{/album}}
+    </ul><!--End row-->
+</div><!--End main-->
+
+<div class="main container gallery_page">
+    <h3 class="title"><span>VIDEO</span></h3>
+    <ul class="row list_picture">
+        {{#video}}
+        {{#attributes}}
+        <li class="col-lg-4 col-sm-6">
+            <figure>
+                <a class="img-link cu-hand" data-action="detail" href="#video/{{id}}" data-post="{{id}}" >
+                  <img src="/static/media/images/{{image}}" alt="Jung Do Kwan" style="max-height: 280px; max-width: 370px"/></a>
+            </figure>
+        <figcaption>
+            <h4><a href="#" data-action="detail" data-post="{{id}}">{{post_title_vi}}</a></h4>
+            <p>{{description_vi}}</p>
+        </figcaption>
+        </li>
+        {{/attributes}}
+        {{/video}}
     </ul><!--End row-->
 </div><!--End main-->
 {/literal}
