--- a/application/packages/admin/views/templates/admin/index.html
+++ b/application/packages/admin/views/templates/admin/index.html
@@ -104,7 +104,7 @@
                                     <a href="#gallery">Hình Ảnh</a>
                                 </li>
                                 <li>
-                                    <a href="#">Video</a>
+                                    <a href="#video">Video</a>
                                 </li>
                                 <li>
                                     <a href="#">Post Categories</a>
@@ -172,6 +172,7 @@
                 version: 1,
                 rootUri: '{site_url()}',
                 myUserId: '',
+                history: [],
                 myAccountId: '',
                 getUrl: function(path) {
                     return this.rootUri + path;
