--- a/application/packages/home/views/templates/home/home.html
+++ b/application/packages/home/views/templates/home/home.html
@@ -51,10 +51,11 @@
     <div class="students col-md-4">
         <h3 class="title"><span>Block Wiget</span></h3>
         <ul class="nav">
-            <li><a href="#">&gt; Đăng ký</a></li>
-            <li><a href="#">&gt; Lịch luyện tập</a></li>
-            <li><a href="#">&gt; Thông tin học phí</a></li>
-            <li><a href="#">&gt; Thông tin tài khoản</a></li>
+          {{#block_wiget}}
+            {{#attributes}}
+            <li><a href="#{{url}}">{{name}}</a></li>
+            {{/attributes}}
+          {{/block_wiget}}
         </ul>
         <div class="check">
             <h2>CHECK POOM/DAN</h2>
