finish edit post category

--- a/application/packages/admin/views/templates/admin/index.html
+++ b/application/packages/admin/views/templates/admin/index.html
@@ -107,7 +107,7 @@
                                     <a href="#video">Video</a>
                                 </li>
                                 <li>
-                                    <a href="#">Post Categories</a>
+                                    <a href="#post-category">Post Categories</a>
                                 </li>
                                 <li>
                                     <a href="#block-wiget">Block Wiget</a>
