--- a/application/packages/admin/views/templates/admin/dashboard.html
+++ b/application/packages/admin/views/templates/admin/dashboard.html
@@ -608,3 +608,70 @@
 </div>
 {/literal}
 </script>
+
+<script id='template-postCategory-admin' type='text/html'>
+{literal}
+<div class="row">
+    <div class="col-lg-12">
+        <div class="panel panel-default">
+            <div class="panel-heading">
+                Danh Sách POST CATEGORY
+            </div>
+            <!-- /.panel-heading -->
+                <div class="panel-body">
+                <div class="table-responsive">
+                   <table class="table table-striped table-bordered table-hover" id="dataTables-example">
+                        <thead>
+                            <tr>
+                                <th>id</th>
+                                <th>name</th>
+                                <th>description</th>
+                                <th>url</th>
+                                <th>edit</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                          {{#postcat}}
+                          {{#attributes}}
+                            <tr class="odd gradeX" data-id="{{id}}">
+                                <td>{{id}}</td>
+                                <td>
+                                  <span class="postcat_name_{{id}}">{{name_vi}}</span>
+                                  <input type="text" class='form-control' id="input_name_{{id}}" style="display: none"/>
+                                </td>
+                                <td>
+                                  <span class="postcat_description_{{id}}">{{description}}</span>
+                                  <input type="text" class='form-control' id="input_description_{{id}}" style="display: none"/>
+                                </td>
+                                <td>
+                                  <span id="url_postcat_{{id}}">{{url}}</span>
+                                  <div class="col-xs-2" id="select_url_postcat_{{id}}" style="display: none">
+                                      <select class="selectUrlPostCat" class="show-tick form-control" multiple>
+                                        
+                                      </select>
+                                    </div>
+                                </td>
+                                <td>
+                                  <span class="glyphicon glyphicon-pencil cu-hand action-button edit-postcat" data-id="{{id}}"></span>
+                                  <span class="edit_button_{{id}}" data-id="{{id}}" style="display: none">
+                                    <a class="glyphicon glyphicon-ok cu-hand save-postcat" title="save"></a>
+                                    <a class="glyphicon glyphicon-remove cu-hand cancel-postcat" title="cancel"></a>
+                                  </span>
+                                </td>
+                            </tr>
+                            {{/attributes}}
+                            {{/postcat}}
+                        </tbody>
+                    </table>
+                </div>
+                <!-- /.table-responsive -->
+                
+            </div>
+            <!-- /.panel-body -->
+        </div>
+        <!-- /.panel -->
+    </div>
+    <!-- /.col-lg-12 -->
+</div>
+{/literal}
+</script>
