put button add post

--- a/application/packages/gallery/views/templates/gallery/details/item.html
+++ b/application/packages/gallery/views/templates/gallery/details/item.html
@@ -8,8 +8,8 @@
           {{#details}}
           {{#attributes}}
           <div class="mini-item">
-            <a class="fancybox" rel="gallery1" href="/static/media/images/{{file_name}}" title="{{description_vi}}">
-              <img src="/static/media/images/{{file_name}}" alt="Image 1" />
+            <a class="fancybox" rel="gallery1" href="{{url}}" title="{{description_vi}}">
+              <img src="{{url}}" alt="Image 1" />
             </a>
           </div>
           {{/attributes}}
