--- a/application/packages/news/views/templates/news/news_event.html
+++ b/application/packages/news/views/templates/news/news_event.html
@@ -2,7 +2,7 @@
     {literal}
 <div class="row" >
     <div id="news_content" class="news_event col-md-8">
-        <h3 class="title"><span>TIN TỨC & SỰ KIỆN</span></h3>
+        <h3 class="title"><span class="post_title">TIN TỨC & SỰ KIỆN</span></h3>
         {{#newsEvent}}
         {{#attributes}}
         <article>
