--- a/application/views/templates/base/header.html
+++ b/application/views/templates/base/header.html
@@ -18,7 +18,7 @@
         <div class="container">
             <div class="banner_caption container">
                 <a href="#" class="navbar-brand"><img src="/static/img/{$pageSetting['header']->logo_url}" alt="Jung Do"/></a>
-                <div class="button"><a href="#" class="btn btn-success">BECOME A MEMEBER</a></div>
+                <!--<div class="button"><a href="#" class="btn btn-success">BECOME A MEMEBER</a></div>-->
             </div>
         </div>	
     </div><!--End banner-->
