--- a/application/packages/admin/views/templates/admin/posts_list.html
+++ b/application/packages/admin/views/templates/admin/posts_list.html
@@ -4,7 +4,7 @@
     <div class="col-lg-12">
         <div class="panel panel-default">
             <div class="panel-heading">
-                Danh Sách Các Bài Viết
+                <span>Danh Sách Các Bài Viết</span> <span style="float: right; position: relative; top: -7px"><input type="button" class="btn btn-default" id="addPost" value="Thêm"></span>
             </div>
             <!-- /.panel-heading -->
             <div class="panel-body">
