finsh create post category

--- a/application/packages/admin/views/templates/admin/dashboard.html
+++ b/application/packages/admin/views/templates/admin/dashboard.html
@@ -613,6 +613,7 @@
 {literal}
 <div class="row">
     <div class="col-lg-12">
+        <p><a class="btn btn-primary btn-lg btn_create_view" href="#create-post-category" role="button">Thêm bài viết</a></p>
         <div class="panel panel-default">
             <div class="panel-heading">
                 Danh Sách POST CATEGORY
