--- a/application/packages/admin/views/templates/admin/gallery_list.html
+++ b/application/packages/admin/views/templates/admin/gallery_list.html
@@ -1,160 +1,223 @@
 <script id='template-gallery-admin' type='text/html'>
-  {literal}
-  <div class="row">
-    <div class="col-lg-12">
-      <p><a class="btn btn-primary btn-lg btn_create_view" href="#gallery-create" role="button">Thêm bài viết</a></p>
-      <div class="panel panel-default">
-        <div class="panel-heading">
-          Danh Sách GALLERY
-        </div>
-        <!-- /.panel-heading -->
-        <div class="panel-body">
-          <div class="table-responsive">
-            <table class="table table-striped table-bordered table-hover" id="dataTables-example">
-              <thead>
-                <tr>
-                  <th>id</th>
-                  <th>Loại</th>
-                  <th>Tiêu Đề</th>
-                  <th>Mô Tả</th>
-                  <th>Nội Dung</th>
-                  <th>Ngày Đăng</th>
-                  <th>Hình Ảnh</th>
-                  <th>Actions</th>
-                </tr>
-              </thead>
-              <tbody>
-                {{#posts}}
-                {{#attributes}}
-                <tr class="odd gradeX">
-                  <td>{{id}}</td>
-                  <td >{{#postFunction}} {{#renderType}} {{post_type_id}} {{/renderType}} {{/postFunction}}</td>
-                  <td>{{post_title_vi}}</td>
-                  <td>{{description_vi}}</td>
-                  <td class="center">{{#postFunction}} {{#renderContent}} {{post_content_vi}} {{/renderContent}} {{/postFunction}}</td>
-                  <td >{{post_date}}</td>
-                  <td class="center"><img height="100" src="/static/media/images/{{image}}" alt="" /></td>
-                  <td> <a href="#gallery/{{id}}"><span class="glyphicon glyphicon-pencil cu-hand action-button"></span></a> <span data-action="delete" data-id="{{id}}" class="glyphicon glyphicon-trash cu-hand action-button"></span> </td>
-                </tr>
-                {{/attributes}}
-                {{/posts}}
-              </tbody>
-            </table>
-          </div>
-          <!-- /.table-responsive -->
+    {literal}
+    <div class="row">
+        <div class="col-lg-12">
+            <p><a class="btn btn-primary btn-lg btn_create_view" href="#gallery-create" role="button">Thêm bài viết</a></p>
+            <div class="panel panel-default">
+                <div class="panel-heading">
+                    Danh Sách GALLERY
+                </div>
+                <!-- /.panel-heading -->
+                <div class="panel-body">
+                    <div class="table-responsive">
+                        <table class="table table-striped table-bordered table-hover" id="dataTables-example">
+                            <thead>
+                                <tr>
+                                    <th>id</th>
+                                    <th>Loại</th>
+                                    <th>Tiêu Đề</th>
+                                    <th>Mô Tả</th>
+                                    <th>Nội Dung</th>
+                                    <th>Ngày Đăng</th>
+                                    <th>Hình Ảnh</th>
+                                    <th>Actions</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                {{#posts}}
+                                {{#attributes}}
+                                <tr class="odd gradeX">
+                                    <td>{{id}}</td>
+                                    <td >{{#postFunction}} {{#renderType}} {{post_type_id}} {{/renderType}} {{/postFunction}}</td>
+                                    <td>{{post_title_vi}}</td>
+                                    <td>{{description_vi}}</td>
+                                    <td class="center">{{#postFunction}} {{#renderContent}} {{post_content_vi}} {{/renderContent}} {{/postFunction}}</td>
+                                    <td >{{post_date}}</td>
+                                    <td class="center"><img height="100" src="/static/media/images/{{image}}" alt="" /></td>
+                                    <td> <a href="#gallery/{{id}}"><span class="glyphicon glyphicon-pencil cu-hand action-button"></span></a> <span data-action="delete" data-id="{{id}}" class="glyphicon glyphicon-trash cu-hand action-button"></span> </td>
+                                </tr>
+                                {{/attributes}}
+                                {{/posts}}
+                            </tbody>
+                        </table>
+                    </div>
+                    <!-- /.table-responsive -->
 
+                </div>
+                <!-- /.panel-body -->
+            </div>
+            <!-- /.panel -->
         </div>
-        <!-- /.panel-body -->
-      </div>
-      <!-- /.panel -->
+        <!-- /.col-lg-12 -->
     </div>
-    <!-- /.col-lg-12 -->
-  </div>
-  {/literal}
+    {/literal}
 </script>
 
 <script id='template-galleryDetail-admin' type='text/html'>
-  {literal}
-  <div class="row">
-    <div class="col-lg-12">
-      <div class="panel panel-default">
-        <div class="panel-heading">
-          Hình Ảnh
-        </div>
-        <div class="panel-body">
-          <div class="row">
-            <div class="col-lg-8">
-              <form role="form">
-                {{#posts}}
-                <div class="form-group">
-                  <label>Tiêu Đề </label>
-                  <input class="form-control" data-dom="input-text" value="{{post_title_vi}}" name="post_title_vi" placeholder="Tiêu Đề tiếng Việt ">
+    {literal}
+    <div class="row">
+        <div class="col-lg-12">
+            <div class="panel panel-default">
+                <div class="panel-heading">
+                    Hình Ảnh
                 </div>
-                <div class="form-group">
-                  <label>Title </label>
-                  <input class="form-control" data-dom="input-text" value="{{post_title_en}}" name="post_title_en" placeholder="Title ">
-                </div>
-                <div class="form-group">
-                  <label>Mô Tả  </label>
-                  <input class="form-control" data-dom="input-text" value="{{description_vi}}" name="description_vi" placeholder="Mô Tả tiếng Việt ">
-                </div>
-                <div class="form-group">
-                  <label>Description </label>
-                  <input class="form-control" data-dom="input-text" vaue="{{description_en}}" name="description_en" placeholder="Description">
-                </div>
+                <div class="panel-body">
+                    <div class="row">
+                        <div class="col-lg-8">
+                            <form role="form">
+                                {{#posts}}
+                                <div class="form-group">
+                                    <label>Tiêu Đề </label>
+                                    <input class="form-control" data-dom="input-text" value="{{post_title_vi}}" name="post_title_vi" placeholder="Tiêu Đề tiếng Việt ">
+                                </div>
+                                <div class="form-group">
+                                    <label>Title </label>
+                                    <input class="form-control" data-dom="input-text" value="{{post_title_en}}" name="post_title_en" placeholder="Title ">
+                                </div>
+                                <div class="form-group">
+                                    <label>Mô Tả  </label>
+                                    <input class="form-control" data-dom="input-text" value="{{description_vi}}" name="description_vi" placeholder="Mô Tả tiếng Việt ">
+                                </div>
+                                <div class="form-group">
+                                    <label>Description </label>
+                                    <input class="form-control" data-dom="input-text" vaue="{{description_en}}" name="description_en" placeholder="Description">
+                                </div>
 
-                <div class="form-group">
-                  <label>Hình Ảnh</label>
-                  <input name='image' type="file">
-                  <div class="alert alert-success" id="image_upload">{{image}}</div>
+                                <div class="form-group">
+                                    <label>Hình Ảnh</label>
+                                    <input name='image' type="file">
+                                    <div class="alert alert-success" id="image_upload">{{image}}</div>
+                                </div>
+
+                                <div id="gallery_image" class="form-group" style="border-bottom: 1px solid rgb(197, 195, 195); border-top: 1px solid rgb(197, 195, 195)">
+
+
+                                </div>
+
+                                <!--                            Select property of post ---------------------------->
+                                <div class="form-group">
+                                    <label>Categories</label>
+                                    <select name="post_categories" class="form-control">
+                                        <option value="none">---Select---</option>
+                                        {{#postCats}}
+                                        {{#attributes}}
+                                        <option {{#postFunction}} {{#renderPostCat}} {{id}} {{/renderPostCat}} {{/postFunction}} value="{{id}}">{{name_vi}}</option>
+                                        {{/attributes}}
+                                        {{/postCats}}
+                                    </select>
+                                </div>
+                                <div class="form-group">
+                                    <label>Nổi Bật </label>
+                                    <label class="radio-inline">
+                                        <input type="radio" name="highlight" id="highlight1" value="1" checked>Yes 
+                                    </label>
+                                    <label class="radio-inline">
+                                        <input type="radio" name="highlight" id="highlight2" value="0">No 
+                                    </label>
+
+                                </div>
+
+                                <button type="button" name="save_post" class="btn btn-default">Submit Button</button>
+                                <button type="reset" class="btn btn-default">Reset Button</button>
+                                {{/posts}}
+                            </form>
+                        </div>
+
+                    </div>
+                    <!-- /.row (nested) -->
                 </div>
-
-                <div id="gallery_image" class="form-group" style="border-bottom: 1px solid rgb(197, 195, 195); border-top: 1px solid rgb(197, 195, 195)">
-
-
-                </div>
-
-                <!--                            Select property of post ---------------------------->
-                <div class="form-group">
-                  <label>Categories</label>
-                  <select name="post_categories" class="form-control">
-                    <option value="none">---Select---</option>
-                    {{#postCats}}
-                    {{#attributes}}
-                    <option {{#postFunction}} {{#renderPostCat}} {{id}} {{/renderPostCat}} {{/postFunction}} value="{{id}}">{{name_vi}}</option>
-                    {{/attributes}}
-                    {{/postCats}}
-                  </select>
-                </div>
-                <div class="form-group">
-                  <label>Nổi Bật </label>
-                  <label class="radio-inline">
-                    <input type="radio" name="highlight" id="highlight1" value="1" checked>Yes 
-                  </label>
-                  <label class="radio-inline">
-                    <input type="radio" name="highlight" id="highlight2" value="0">No 
-                  </label>
-
-                </div>
-
-                <button type="button" name="save_post" class="btn btn-default">Submit Button</button>
-                <button type="reset" class="btn btn-default">Reset Button</button>
-                {{/posts}}
-              </form>
+                <!-- /.panel-body -->
             </div>
-
-          </div>
-          <!-- /.row (nested) -->
+            <!-- /.panel -->
         </div>
-        <!-- /.panel-body -->
-      </div>
-      <!-- /.panel -->
+        <!-- /.col-lg-12 -->
     </div>
-    <!-- /.col-lg-12 -->
-  </div>
-  {/literal}
+    {/literal}
 </script>
 
 <script id='template-galleryImageDetail-admin' type='text/html'>
-  {literal}
-  <div class="image-sections">
-    {{#images}}
-    {{#attributes}}
-    <div class="image-detail">
-      <label>Url </label>
-      <input class="form-control" data-dom="input-text" value="{{url}}" data-iddetail="{{cid}}" name="url" placeholder="http://">
+    {literal}
+    <div class="image-sections">
+        {{#images}}
+        {{#attributes}}
+        <div class="image-detail">
+            <label>Url </label>
+            <input class="form-control" data-dom="input-text" value="{{url}}" data-iddetail="{{cid}}" name="url" placeholder="http://">
 
-      <label>Mô Tả</label>
-      <textarea name="description_vi" data-dom="input-text" data-iddetail="{{cid}}" class="form-control" rows="3">{{description_vi}}</textarea>
-      <a class="btn btn-danger delete-image" data-detail="{{cid}}" style="margin-top: 10px">xoá</a>
-      <hr>
+            <label>Mô Tả</label>
+            <textarea name="description_vi" data-dom="input-text" data-iddetail="{{cid}}" class="form-control" rows="3">{{description_vi}}</textarea>
+            <a class="btn btn-danger delete-image" data-detail="{{cid}}" style="margin-top: 10px">xoá</a>
+            <hr>
+        </div>
     </div>
-  </div>
-  {{/attributes}}
-  {{/images}}
-  <div style="margin: 2px 0px 4px 0px;">
+    {{/attributes}}
+    {{/images}}
+    <div style="margin: 2px 0px 4px 0px;">
 
-    <button type="button" class="add-image glyphicon glyphicon-plus btn btn-default"></button>
-  </div>
-  {/literal}
+        <button type="button" class="add-image glyphicon glyphicon-plus btn btn-default"></button>
+    </div>
+    {/literal}
+</script>
+
+<script id='template-create-post-category-admin' type='text/html'>
+    {literal}
+    <div class="row">
+        <div class="col-lg-12">
+            <div class="panel panel-default">
+                <div class="panel-heading">
+                    POST CATEGORY
+                </div>
+                <div class="panel-body">
+                    <div class="row">
+                        <div class="col-lg-8">
+                            <form role="form" class="form_post_category">
+                                <div class="form-group">
+                                    <label>Tiêu Đề </label>
+                                    <input class="form-control"  data-dom="input-text" value="" name="name_vi" placeholder="Tiêu Đề tiếng Việt ">
+                                </div>
+                                <div class="form-group">
+                                    <label>Title </label>
+                                    <input class="form-control" data-dom="input-text" value="" name="name_en" placeholder="Title ">
+                                </div>
+                                <div class="form-group">
+                                    <label>Mô Tả  </label>
+                                    <input class="form-control" data-dom="input-text" value="" name="description" placeholder="Mô Tả tiếng Việt ">
+                                </div>
+                                
+                                <!--                            Select property of post ---------------------------->
+                                <div class="form-group">
+                                    <label>Categories</label>
+                                    <select class="form-control" name="post_type_id">
+                                        {{#post_type}}
+                                        {{#attributes}}
+                                            <option value="{{id}}">{{name_vi}}</option>
+                                        {{/attributes}}
+                                        {{/post_type}}
+                                    </select>
+                                </div>
+                                <div>
+                                    <label>URL</label>
+                                    
+                                      <select class="selectUrlPostCat" name="url" class="show-tick form-control" multiple>
+                                        
+                                      </select>
+                                    
+                                </div>
+                                <div style="margin-top: 10px">
+                                <button type="button" class="btn btn-default save-post-category">Submit Button</button>
+                                <button type="reset" class="btn btn-default">Reset Button</button>
+                                </div>
+                            </form>
+                        </div>
+
+                    </div>
+                    <!-- /.row (nested) -->
+                </div>
+                <!-- /.panel-body -->
+            </div>
+            <!-- /.panel -->
+        </div>
+        <!-- /.col-lg-12 -->
+    </div>
+    {/literal}
 </script>
