--- a/application/packages/admin/views/templates/admin/gallery_list.html
+++ b/application/packages/admin/views/templates/admin/gallery_list.html
@@ -4,7 +4,7 @@
         <div class="col-lg-12">
             <p><a class="btn btn-primary btn-lg btn_create_view" href="#gallery-create" role="button">Thêm bài viết</a></p>
             <div class="panel panel-default">
-                <div class="panel-heading">
+                <div class="panel-heading title_list_gallery">
                     Danh Sách GALLERY
                 </div>
                 <!-- /.panel-heading -->
