list post categories in front-end

--- a/application/packages/home/views/templates/home/home.html
+++ b/application/packages/home/views/templates/home/home.html
@@ -32,19 +32,18 @@
         {{/newestNews}}
         <div class="list-news row">
             <ul class="nav col-md-6">
-                {{#newsCat}}
+                {{#newsCat1}}
                 {{#attributes}}
                 <li><a href="#">{{name_vi}}</a></li>
                 {{/attributes}}
-                {{/newsCat}}
+                {{/newsCat1}}
             </ul>
             <ul class="nav col-md-6">
-                <li><a href="#">Vestibulum ante ipsum primis</a></li>
-                <li><a href="#">In faucibus orci luctus et</a></li>
-                <li><a href="#">Ultrices posuere cubilia Curae</a></li>
-                <li><a href="#">Suspendisse sollicitudin velit sed leo</a></li>
-                <li><a href="#">Ut pharetra augue nec augue</a></li>
-                <li><a href="#">Nam elit agna,endrerit sit amet</a></li>
+                {{#newsCat2}}
+                {{#attributes}}
+                <li><a href="#">{{name_vi}}</a></li>
+                {{/attributes}}
+                {{/newsCat2}}
             </ul>
         </div><!--End Tin tuc khac -->
     </div><!--End tin tuc hoat dong -->
