--- a/application/views/templates/base/header.html
+++ b/application/views/templates/base/header.html
@@ -41,19 +41,35 @@
                         <div class="program row">
                             <h4>Chương trình học</h4>
                             <ul class="col-lg-6">
+                                {assign var=j value=0}
                                 {foreach $main->subMenu as $sub}
-                                <li><a href="#"><span class="arrow">></span> {$sub->name_{$lang}}</a></li>
+                                {if $j lt (count($main->subMenu)/2)}
+                                <li><a href="#{$sub->url}"><span class="arrow">></span> {$sub->name_{$lang}}</a></li>
+                                {/if}
+                                {assign var=j value=$j+1}
                                 {/foreach}
                             </ul>
-                            
+                            <ul class="col-lg-6">
+                                {assign var=j value=0}
+                                {foreach $main->subMenu as $sub}
+                                {if $j >= (count($main->subMenu)/2)}
+                                <li><a href="#{$sub->url}"><span class="arrow">></span> {$sub->name_{$lang}}</a></li>
+                                {/if}
+                                {assign var=j value=$j+1}
+                                {/foreach}
+                            </ul>
                         </div>
 <!--                        <div class="contact row">
-                            <h4>Xem thêm thông tin</h4>
+                            <h4>Chương trình học</h4>
                             <ul class="col-lg-12 col-md-12">
-                                <li><a href="#"><span class="arrow">></span> Praesent justo dolor</a></li>
-                                <li><a href="#"><span class="arrow">></span> Praesent justo dolor</a></li>
-                                <li><a href="#"><span class="arrow">></span> Praesent justo dolor</a></li>
-                                <li><a href="#"><span class="arrow">></span> Praesent justo dolor</a></li>
+                                {assign var=j value=0}
+                                {foreach $main->subMenu as $sub}
+                                
+                                {if $j >= (count($main->subMenu)/2)}
+                                <li><a href="#"><span class="arrow">></span> {$sub->name_{$lang}}</a></li>
+                                {/if}
+                                {assign var=j value=$j+1}
+                                {/foreach}
                             </ul>
                         </div>	-->
                         {/if}
